# feed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: article.rs  cache.rs  cli.rs  commands.rs  config.rs  display.rs  feed_source.rs  lib.rs  main.rs
src/article_store/: fetch.rs  mod.rs
src/tui/: action.rs  app.rs  handlers.rs  keybindings.rs  mod.rs  ui.rs
tests/: article_store_test.rs  article_test.rs  cache_test.rs  cli_test.rs  config_test.rs  display_test.rs  feed_source_test.rs  tui_app_test.rs  tui_keybindings_test.rs
tests/fixtures/: page_with_atom.html  page_with_multiple_feeds.html  page_with_relative_feed.html  page_with_rss.html  page_without_feed.html  sample_rss.xml
