[package]
name = "feed-reader"
version = "0.1.3"
edition = "2021"
description = "A simple RSS/Atom feed reader for the terminal"
license = "MIT"
repository = "https://github.com/yujixr/feed"
readme = "README.md"
keywords = ["rss", "atom", "feed", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "feed"
path = "src/main.rs"

[lib]
name = "feed"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
encoding_rs = "0.8.35"
etcetera = "0.11"
feed-rs = "2.3"
futures = "0.3"
html2text = "0.16"
open = "5"
ratatui = "0.30"
readability = { package = "readability-rust", version = "0.1" }
reqwest = { version = "0.13", features = ["rustls", "gzip", "brotli"], default-features = false }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
sha2 = "0.10"
terminal_size = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
unicode-width = "0.2"
url = "2"

[dev-dependencies]
tempfile = "3"
